--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-website-app",
-  "homepage": "https://angearsene.github.io/portfolio-app",
+  "homepage": "https://ange-arsene.is-a.dev",
   "private": false,
   "version": "0.0.0",
   "type": "module",
